2010-08-20  Ademar de Souza Reis Jr  <ademar.reis@openbossa.org>

        Reviewed by Ariya Hidayat.

        [Qt] Enable some http/ tests which are passing for some time
        https://bugs.webkit.org/show_bug.cgi?id=44366

        These are reported as "passing, require confirmation on bot". Some of them
        fail on my machines, so I'm enabling only the ones which pass.

        * platform/qt/Skipped: enable several http tests

2010-08-20  Tony Gentilcore  <tonyg@chromium.org>

        Reviewed by Adam Barth.

        Crash in WebCore::Node::createRendererIfNeeded()
        https://bugs.webkit.org/show_bug.cgi?id=44129

        * html5lib/resources/adoption02.dat: A crazy DOM from https://bugs.webkig.org/show_bug.cgi?id=44170 which previously crashed. The expectation doesn't appear to be correct, but it behaves the same in Firefox 4, so I'm going to file a spec bug.
        * fast/parser/remove-misnested-iframe-in-beforeload-expected.txt:
        * fast/parser/remove-misnested-iframe-in-beforeload.html: Misnest a node in a table and remove it during its beforeload handler. The node should not be in the tree.
        * fast/parser/remove-misnested-iframe-parent-in-beforeload-expected.txt:
        * fast/parser/remove-misnested-iframe-parent-in-beforeload.html: Misnest a node in a table and remove its parent during its beforeload handler. The adoption agency should have already changed its parent to the one before the table and it and its parent should be removed.

2010-08-20  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Joseph Pecoraro.

        [GTK] Inspector extensions tests fail on GTK+ bots because onSelectionChanged is missing
        https://bugs.webkit.org/show_bug.cgi?id=44342

        * platform/gtk/Skipped: Unskip tests which are now passing.

2010-08-20  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r65757.
        http://trac.webkit.org/changeset/65757