@@ -1,0 +1,2 @@
+Test that onerror fires for a script with HTTP status 500.
+PASS
