@@ -1,0 +1,11 @@
+<html>
+<body>
+<div>Test that onerror fires for a script with HTTP status 500.</div>
+<div id=result>Testing...</div>
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+</script>
+<script onerror="document.getElementById('result').innerHTML = 'PASS';" src="resources/script-500.php" type="text/javascript"></script>
+</body>
+</html>
