@@ -551,9 +551,7 @@ void Loader::Host::didReceiveData(SubresourceLoader* loader, const char* data, i
     if (resource->errorOccurred())
         return;
         
-    if (resource->response().httpStatusCode() / 100 == 4) {
-        // Treat a 4xx response like a network error for all resources but images (which will ignore the error and continue to load for 
-        // legacy compatibility).
+    if (resource->response().httpStatusCode() >= 400) {
         resource->httpStatusCodeError();
         return;
     }
