@@ -1,3 +1,14 @@
+2010-08-20  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Brady Eidson.
+
+        https://bugs.webkit.org/show_bug.cgi?id=38428
+        HTTP code 500 (and other non-4xx codes) wrongfully treated as success for subresources
+
+        * http/tests/misc/resources/script-500.php: Added.
+        * http/tests/misc/script-500-expected.txt: Added.
+        * http/tests/misc/script-500.html: Added.
+
 2010-08-20  Ademar de Souza Reis Jr  <ademar.reis@openbossa.org>
 
         Reviewed by Ariya Hidayat.
